// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component in moved car form matches snapshot 1`] = `
<div>
  <p>
    Pakolliset kentät on merkitty tähdellä *
  </p>
  <div>
    <div
      class="rectification-info-container"
    >
      <div
        class="rectification-user-section"
      >
        <fieldset
          class="SelectionGroup-module_selectionGroup__6Jxu8"
        >
          <legend
            class="SelectionGroup-module_label__qlluz"
          >
            Teen oikaisuvaatimuksen
             
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </legend>
          <div
            class="SelectionGroup-module_items__28m_S SelectionGroup-module_vertical__3iorC"
          >
            <div>
              <div
                class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
              >
                <input
                  class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
                  id="owner"
                  type="radio"
                  value="owner"
                />
                <label
                  class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
                  for="owner"
                >
                  Ajoneuvon omistajana/haltijana
                </label>
              </div>
            </div>
            <div>
              <div
                class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
              >
                <input
                  class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
                  id="poa-holder"
                  type="radio"
                  value="poa-holder"
                />
                <label
                  class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
                  for="poa-holder"
                >
                  Valtakirjalla (toisen puolesta)
                </label>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          class="rectification-form-user-details small"
        >
          <div
            class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
          >
            <label
              class="FieldLabel-module_label__1zrXK "
              for="fullName"
            >
              Nimi
              <span
                class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
              >
                 
                *
              </span>
            </label>
            <div
              class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
            >
              <input
                class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
                id="fullName"
                readonly=""
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
          <svg
            aria-label="Tieto haettu Helsinki-profiilista"
            class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik rectification-form-checkmark"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <rect
                height="24"
                width="24"
              />
              <path
                d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M12,4 C7.581722,4 4,7.581722 4,12 C4,16.418278 7.581722,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.581722 16.418278,4 12,4 Z M16.5,8 L18,9.5 L10.5,17 L6,12.5 L7.5,11 L10.5,14 L16.5,8 Z"
                fill="currentColor"
              />
            </g>
          </svg>
          <div
            class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
          >
            <label
              class="FieldLabel-module_label__1zrXK "
              for="ssn"
            >
              Henkilötunnus
              <span
                class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
              >
                 
                *
              </span>
            </label>
            <div
              class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
            >
              <input
                class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
                id="ssn"
                readonly=""
                required=""
                type="text"
                value="123456-789A"
              />
            </div>
          </div>
          <svg
            aria-label="Tieto haettu Helsinki-profiilista"
            class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik rectification-form-checkmark"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <rect
                height="24"
                width="24"
              />
              <path
                d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M12,4 C7.581722,4 4,7.581722 4,12 C4,16.418278 7.581722,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.581722 16.418278,4 12,4 Z M16.5,8 L18,9.5 L10.5,17 L6,12.5 L7.5,11 L10.5,14 L16.5,8 Z"
                fill="currentColor"
              />
            </g>
          </svg>
          <div
            class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
          >
            <label
              class="FieldLabel-module_label__1zrXK "
              for="email"
            >
              Sähköpostiosoite
              <span
                class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
              >
                 
                *
              </span>
            </label>
            <div
              class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
            >
              <input
                class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
                id="email"
                readonly=""
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
          <svg
            aria-label="Tieto haettu Helsinki-profiilista"
            class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik rectification-form-checkmark"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <rect
                height="24"
                width="24"
              />
              <path
                d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M12,4 C7.581722,4 4,7.581722 4,12 C4,16.418278 7.581722,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.581722 16.418278,4 12,4 Z M16.5,8 L18,9.5 L10.5,17 L6,12.5 L7.5,11 L10.5,14 L16.5,8 Z"
                fill="currentColor"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="rectification-poa-fileinput"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="rectificationPOAFile"
          >
            Liitä valtakirja
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <div
              class="FileInput-module_fileInputContainer__9N5TG"
            >
              <div
                aria-hidden="true"
                class="FileInput-module_dragAndDrop__3d3xe"
              >
                <div
                  class="FileInput-module_dragAndDropLabel__1pDQN"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 1.636l5.657 5.657-1.414 1.414L13 5.465V18h-2V5.465L7.757 8.707 6.343 7.293 12 1.636zM5 15v5h14v-5h2v7H3v-7h2z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                  <span
                    class="FileInput-module_dragAndDropLabelText__3AJ4P"
                  >
                    Raahaa tiedostot tähän
                  </span>
                </div>
              </div>
              <div
                class="FileInput-module_dragAndDropHelperText__31Ljw"
              >
                tai valitse tiedostot laitteeltasi
              </div>
              <div
                class="FileInput-module_fileInputWrapper__1E8Jf"
              >
                <button
                  aria-hidden="true"
                  class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    aria-hidden="true"
                    class="Button-module_icon__O-h7R button_hds-icon__17j8Z"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                      >
                        <path
                          d="M0 0h24v24H0z"
                        />
                        <path
                          d="M13 6v5h5v2h-5v5h-2v-5H6v-2h5V6z"
                          fill="currentColor"
                        />
                      </g>
                    </svg>
                  </div>
                  <span
                    class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
                  >
                    Lisää tiedosto
                  </span>
                </button>
                <input
                  accept=".png, .jpg, .pdf"
                  aria-describedby="rectificationPOAFile-helper rectificationPOAFile-info"
                  class="FileInput-module_fileInput__hClRc"
                  id="rectificationPOAFile"
                  type="file"
                />
              </div>
            </div>
          </div>
          <div
            class="TextInput-module_infoText__zHOGs text-input_hds-text-input__info-text__3bqzy"
            id="rectificationPOAFile-info"
          >
            Yhtään tiedostoa ei ole valittu.
          </div>
          <div
            class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
            id="rectificationPOAFile-helper"
          >
            Vain .png,  .jpg ja  .pdf tiedostoja.
          </div>
        </div>
        <ul
          aria-label="Yhtään tiedostoa ei ole valittu."
          class="FileInput-module_fileList__drFD1"
          id="rectificationPOAFile-list"
          tabindex="-1"
        />
      </div>
    </div>
    <hr />
    <div
      class="rectification-link-to-profile"
    >
      <svg
        aria-hidden="true"
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <rect
            height="24"
            width="24"
          />
          <path
            d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M12,4 C7.581722,4 4,7.581722 4,12 C4,16.418278 7.581722,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.581722 16.418278,4 12,4 Z M16.5,8 L18,9.5 L10.5,17 L6,12.5 L7.5,11 L10.5,14 L16.5,8 Z"
            fill="currentColor"
          />
        </g>
      </svg>
      <span>
        Merkityt tiedot on haettu Helsinki-profiilistasi.
      </span>
      <a
        aria-label="Siirry Helsinki-profiiliin muokataksesi tietoja. Avautuu uudessa välilehdessä. Avaa toisen verkkosivun."
        class="Link-module_link__TeBQo link_hds-link__5Oxo- Link-module_linkM__30gsY link_hds-link--medium__xEU_F"
        href="https://profiili.test.kuva.hel.ninja"
        rel="noopener"
        target="_blank"
      >
        Siirry Helsinki-profiiliin muokataksesi tietoja.
        <svg
          aria-hidden="true"
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Link-module_icon__3ReCc link_icon__i_HqN Link-module_verticalAlignSmallOrMediumIcon__3FOVU link_vertical-align-small-or-medium-icon__25J0G"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h24v24H0z"
            />
            <path
              d="M10 3v2H5v14h14v-5h2v7H3V3h7zm11 0v8h-2V6.413l-7 7.001L10.586 12l6.999-7H13V3h8z"
              fill="currentColor"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="rectification-form-container"
    >
      <div
        class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz"
      >
        <input
          class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
          id="newEmail"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
          for="newEmail"
        >
          Haluan ilmoitukset asian käsittelystä eri sähköpostiosoitteeseen
        </label>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="newEmailAddress"
        >
          Sähköpostiosoite
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            disabled=""
            id="newEmailAddress"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="newEmailConfirm"
        >
          Kirjoita sähköpostiosoite uudelleen
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            disabled=""
            id="newEmailConfirm"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="address"
        >
          Lähiosoite
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="address"
            placeholder="Esim. Elimäenkatu 5"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="rectification-subgrid"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="zipCode"
          >
            Postinumero
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="zipCode"
              placeholder="Esim. 00100"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="city"
          >
            Postitoimipaikka
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="city"
              placeholder="Esim. Helsinki"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Select-module_root__Ka5uO"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="hds-select-8-toggle-button"
            id="hds-select-8-label"
          >
            Maakoodi
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </label>
          <div
            class="Select-module_wrapper__1WQXs"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="hds-select-8-label hds-select-8-toggle-button"
              aria-owns="hds-select-8-menu"
              class="Select-module_button__1aIsm"
              id="hds-select-8-toggle-button"
              type="button"
            >
              <span
                class="Select-module_buttonLabel__1fqu5"
              >
                (+358)
              </span>
              <svg
                aria-hidden="true"
                class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Select-module_angleIcon__2-9AD"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <path
                    d="M0 0h24v24H0z"
                  />
                  <path
                    d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                    fill="currentColor"
                  />
                </g>
              </svg>
            </button>
            <ul
              aria-labelledby="hds-select-8-label"
              aria-required="true"
              class="Select-module_menu__1H2aU"
              id="hds-select-8-menu"
              role="listbox"
              style="max-height: 260px;"
              tabindex="-1"
            />
          </div>
        </div>
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="phone"
          >
            Puhelinnumero
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="phone"
              placeholder="Esim. 401234567"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="IBAN"
        >
          Pankkitilinumero (IBAN)
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="IBAN"
            placeholder="Esim. FI9780001700903330"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq rectification-textarea"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="rectification-content"
        >
          Oikaisuvaatimuksen sisältö
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <textarea
            aria-describedby="rectification-content-helper"
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="rectification-content"
            required=""
          />
        </div>
        
        <div
          class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
          id="rectification-content-helper"
        >
          0/2500 merkkiä
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq rectification-fileinput"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="rectificationAttachments"
        >
          Liitetiedostot
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <div
            class="FileInput-module_fileInputContainer__9N5TG"
          >
            <div
              aria-hidden="true"
              class="FileInput-module_dragAndDrop__3d3xe"
            >
              <div
                class="FileInput-module_dragAndDropLabel__1pDQN"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                  >
                    <path
                      d="M0 0h24v24H0z"
                    />
                    <path
                      d="M12 1.636l5.657 5.657-1.414 1.414L13 5.465V18h-2V5.465L7.757 8.707 6.343 7.293 12 1.636zM5 15v5h14v-5h2v7H3v-7h2z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
                <span
                  class="FileInput-module_dragAndDropLabelText__3AJ4P"
                >
                  Raahaa tiedostot tähän
                </span>
              </div>
            </div>
            <div
              class="FileInput-module_dragAndDropHelperText__31Ljw"
            >
              tai valitse tiedostot laitteeltasi
            </div>
            <div
              class="FileInput-module_fileInputWrapper__1E8Jf"
            >
              <button
                aria-hidden="true"
                class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS"
                tabindex="-1"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class="Button-module_icon__O-h7R button_hds-icon__17j8Z"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M13 6v5h5v2h-5v5h-2v-5H6v-2h5V6z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
                <span
                  class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
                >
                  Lisää tiedostoja
                </span>
              </button>
              <input
                accept=".png, .jpg, .pdf"
                aria-describedby="rectificationAttachments-helper rectificationAttachments-info"
                class="FileInput-module_fileInput__hClRc"
                id="rectificationAttachments"
                multiple=""
                type="file"
              />
            </div>
          </div>
        </div>
        <div
          class="TextInput-module_infoText__zHOGs text-input_hds-text-input__info-text__3bqzy"
          id="rectificationAttachments-info"
        >
          Yhtään tiedostoa ei ole valittu.
        </div>
        <div
          class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
          id="rectificationAttachments-helper"
        >
          Vain .png,  .jpg ja  .pdf tiedostoja.
        </div>
      </div>
      <ul
        aria-label="Yhtään tiedostoa ei ole valittu."
        class="FileInput-module_fileList__drFD1"
        id="rectificationAttachments-list"
        tabindex="-1"
      />
      <fieldset
        class="SelectionGroup-module_selectionGroup__6Jxu8 rectification-decision-choice"
      >
        <legend
          class="SelectionGroup-module_label__qlluz"
        >
          Haluan päätöksen
           
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </legend>
        <div
          class="SelectionGroup-module_items__28m_S SelectionGroup-module_vertical__3iorC"
        >
          <div>
            <div
              class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
            >
              <input
                checked=""
                class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
                id="toParkingService"
                type="radio"
                value="toParkingService"
              />
              <label
                class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
                for="toParkingService"
              >
                Pysäköinnin asiointikansiooni
              </label>
            </div>
          </div>
          <div>
            <div
              class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
            >
              <input
                class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
                id="byMail"
                type="radio"
                value="byMail"
              />
              <label
                class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
                for="byMail"
              >
                Kirjeitse antamaani osoitteeseen
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Component in parking fine appeal form matches snapshot 1`] = `
<div>
  <p>
    Pakolliset kentät on merkitty tähdellä *
  </p>
  <div>
    <div
      class="rectification-info-container"
    >
      <div
        class="rectification-user-section"
      >
        <fieldset
          class="SelectionGroup-module_selectionGroup__6Jxu8"
        >
          <legend
            class="SelectionGroup-module_label__qlluz"
          >
            Teen oikaisuvaatimuksen
             
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </legend>
          <div
            class="SelectionGroup-module_items__28m_S SelectionGroup-module_vertical__3iorC"
          >
            <div>
              <div
                class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
              >
                <input
                  checked=""
                  class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
                  id="driver"
                  type="radio"
                  value="driver"
                />
                <label
                  class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
                  for="driver"
                >
                  Ajoneuvon kuljettajana
                </label>
              </div>
            </div>
            <div>
              <div
                class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
              >
                <input
                  class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
                  id="owner"
                  type="radio"
                  value="owner"
                />
                <label
                  class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
                  for="owner"
                >
                  Ajoneuvon omistajana/haltijana
                </label>
              </div>
            </div>
            <div>
              <div
                class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
              >
                <input
                  class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
                  id="poa-holder"
                  type="radio"
                  value="poa-holder"
                />
                <label
                  class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
                  for="poa-holder"
                >
                  Valtakirjalla (toisen puolesta)
                </label>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          class="rectification-form-user-details "
        >
          <div
            class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
          >
            <label
              class="FieldLabel-module_label__1zrXK "
              for="fullName"
            >
              Nimi
              <span
                class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
              >
                 
                *
              </span>
            </label>
            <div
              class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
            >
              <input
                class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
                id="fullName"
                readonly=""
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
          <svg
            aria-label="Tieto haettu Helsinki-profiilista"
            class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik rectification-form-checkmark"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <rect
                height="24"
                width="24"
              />
              <path
                d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M12,4 C7.581722,4 4,7.581722 4,12 C4,16.418278 7.581722,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.581722 16.418278,4 12,4 Z M16.5,8 L18,9.5 L10.5,17 L6,12.5 L7.5,11 L10.5,14 L16.5,8 Z"
                fill="currentColor"
              />
            </g>
          </svg>
          <div
            class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
          >
            <label
              class="FieldLabel-module_label__1zrXK "
              for="ssn"
            >
              Henkilötunnus
              <span
                class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
              >
                 
                *
              </span>
            </label>
            <div
              class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
            >
              <input
                class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
                id="ssn"
                readonly=""
                required=""
                type="text"
                value="123456-789A"
              />
            </div>
          </div>
          <svg
            aria-label="Tieto haettu Helsinki-profiilista"
            class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik rectification-form-checkmark"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <rect
                height="24"
                width="24"
              />
              <path
                d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M12,4 C7.581722,4 4,7.581722 4,12 C4,16.418278 7.581722,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.581722 16.418278,4 12,4 Z M16.5,8 L18,9.5 L10.5,17 L6,12.5 L7.5,11 L10.5,14 L16.5,8 Z"
                fill="currentColor"
              />
            </g>
          </svg>
          <div
            class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
          >
            <label
              class="FieldLabel-module_label__1zrXK "
              for="email"
            >
              Sähköpostiosoite
              <span
                class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
              >
                 
                *
              </span>
            </label>
            <div
              class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
            >
              <input
                class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
                id="email"
                readonly=""
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
          <svg
            aria-label="Tieto haettu Helsinki-profiilista"
            class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik rectification-form-checkmark"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <rect
                height="24"
                width="24"
              />
              <path
                d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M12,4 C7.581722,4 4,7.581722 4,12 C4,16.418278 7.581722,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.581722 16.418278,4 12,4 Z M16.5,8 L18,9.5 L10.5,17 L6,12.5 L7.5,11 L10.5,14 L16.5,8 Z"
                fill="currentColor"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="rectification-link-to-profile"
    >
      <svg
        aria-hidden="true"
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <rect
            height="24"
            width="24"
          />
          <path
            d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M12,4 C7.581722,4 4,7.581722 4,12 C4,16.418278 7.581722,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.581722 16.418278,4 12,4 Z M16.5,8 L18,9.5 L10.5,17 L6,12.5 L7.5,11 L10.5,14 L16.5,8 Z"
            fill="currentColor"
          />
        </g>
      </svg>
      <span>
        Merkityt tiedot on haettu Helsinki-profiilistasi.
      </span>
      <a
        aria-label="Siirry Helsinki-profiiliin muokataksesi tietoja. Avautuu uudessa välilehdessä. Avaa toisen verkkosivun."
        class="Link-module_link__TeBQo link_hds-link__5Oxo- Link-module_linkM__30gsY link_hds-link--medium__xEU_F"
        href="https://profiili.test.kuva.hel.ninja"
        rel="noopener"
        target="_blank"
      >
        Siirry Helsinki-profiiliin muokataksesi tietoja.
        <svg
          aria-hidden="true"
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Link-module_icon__3ReCc link_icon__i_HqN Link-module_verticalAlignSmallOrMediumIcon__3FOVU link_vertical-align-small-or-medium-icon__25J0G"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h24v24H0z"
            />
            <path
              d="M10 3v2H5v14h14v-5h2v7H3V3h7zm11 0v8h-2V6.413l-7 7.001L10.586 12l6.999-7H13V3h8z"
              fill="currentColor"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="rectification-form-container"
    >
      <div
        class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz"
      >
        <input
          class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
          id="newEmail"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
          for="newEmail"
        >
          Haluan ilmoitukset asian käsittelystä eri sähköpostiosoitteeseen
        </label>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="newEmailAddress"
        >
          Sähköpostiosoite
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            disabled=""
            id="newEmailAddress"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="newEmailConfirm"
        >
          Kirjoita sähköpostiosoite uudelleen
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            disabled=""
            id="newEmailConfirm"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="address"
        >
          Lähiosoite
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="address"
            placeholder="Esim. Elimäenkatu 5"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="rectification-subgrid"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="zipCode"
          >
            Postinumero
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="zipCode"
              placeholder="Esim. 00100"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="city"
          >
            Postitoimipaikka
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="city"
              placeholder="Esim. Helsinki"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="Select-module_root__Ka5uO"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="hds-select-1-toggle-button"
            id="hds-select-1-label"
          >
            Maakoodi
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </label>
          <div
            class="Select-module_wrapper__1WQXs"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="hds-select-1-label hds-select-1-toggle-button"
              aria-owns="hds-select-1-menu"
              class="Select-module_button__1aIsm"
              id="hds-select-1-toggle-button"
              type="button"
            >
              <span
                class="Select-module_buttonLabel__1fqu5"
              >
                (+358)
              </span>
              <svg
                aria-hidden="true"
                class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Select-module_angleIcon__2-9AD"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <path
                    d="M0 0h24v24H0z"
                  />
                  <path
                    d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                    fill="currentColor"
                  />
                </g>
              </svg>
            </button>
            <ul
              aria-labelledby="hds-select-1-label"
              aria-required="true"
              class="Select-module_menu__1H2aU"
              id="hds-select-1-menu"
              role="listbox"
              style="max-height: 260px;"
              tabindex="-1"
            />
          </div>
        </div>
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="phone"
          >
            Puhelinnumero
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
               
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="phone"
              placeholder="Esim. 401234567"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="IBAN"
        >
          Pankkitilinumero (IBAN)
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="IBAN"
            placeholder="Esim. FI9780001700903330"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq rectification-textarea"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="rectification-content"
        >
          Oikaisuvaatimuksen sisältö
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <textarea
            aria-describedby="rectification-content-helper"
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="rectification-content"
            required=""
          />
        </div>
        
        <div
          class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
          id="rectification-content-helper"
        >
          0/2500 merkkiä
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq rectification-fileinput"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="rectificationAttachments"
        >
          Liitetiedostot
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <div
            class="FileInput-module_fileInputContainer__9N5TG"
          >
            <div
              aria-hidden="true"
              class="FileInput-module_dragAndDrop__3d3xe"
            >
              <div
                class="FileInput-module_dragAndDropLabel__1pDQN"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                  >
                    <path
                      d="M0 0h24v24H0z"
                    />
                    <path
                      d="M12 1.636l5.657 5.657-1.414 1.414L13 5.465V18h-2V5.465L7.757 8.707 6.343 7.293 12 1.636zM5 15v5h14v-5h2v7H3v-7h2z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
                <span
                  class="FileInput-module_dragAndDropLabelText__3AJ4P"
                >
                  Raahaa tiedostot tähän
                </span>
              </div>
            </div>
            <div
              class="FileInput-module_dragAndDropHelperText__31Ljw"
            >
              tai valitse tiedostot laitteeltasi
            </div>
            <div
              class="FileInput-module_fileInputWrapper__1E8Jf"
            >
              <button
                aria-hidden="true"
                class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS"
                tabindex="-1"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class="Button-module_icon__O-h7R button_hds-icon__17j8Z"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M13 6v5h5v2h-5v5h-2v-5H6v-2h5V6z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
                <span
                  class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
                >
                  Lisää tiedostoja
                </span>
              </button>
              <input
                accept=".png, .jpg, .pdf"
                aria-describedby="rectificationAttachments-helper rectificationAttachments-info"
                class="FileInput-module_fileInput__hClRc"
                id="rectificationAttachments"
                multiple=""
                type="file"
              />
            </div>
          </div>
        </div>
        <div
          class="TextInput-module_infoText__zHOGs text-input_hds-text-input__info-text__3bqzy"
          id="rectificationAttachments-info"
        >
          Yhtään tiedostoa ei ole valittu.
        </div>
        <div
          class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
          id="rectificationAttachments-helper"
        >
          Vain .png,  .jpg ja  .pdf tiedostoja.
        </div>
      </div>
      <ul
        aria-label="Yhtään tiedostoa ei ole valittu."
        class="FileInput-module_fileList__drFD1"
        id="rectificationAttachments-list"
        tabindex="-1"
      />
      <fieldset
        class="SelectionGroup-module_selectionGroup__6Jxu8 rectification-decision-choice"
      >
        <legend
          class="SelectionGroup-module_label__qlluz"
        >
          Haluan päätöksen
           
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
             
            *
          </span>
        </legend>
        <div
          class="SelectionGroup-module_items__28m_S SelectionGroup-module_vertical__3iorC"
        >
          <div>
            <div
              class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
            >
              <input
                checked=""
                class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
                id="toParkingService"
                type="radio"
                value="toParkingService"
              />
              <label
                class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
                for="toParkingService"
              >
                Pysäköinnin asiointikansiooni
              </label>
            </div>
          </div>
          <div>
            <div
              class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
            >
              <input
                class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
                id="byMail"
                type="radio"
                value="byMail"
              />
              <label
                class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
                for="byMail"
              >
                Kirjeitse antamaani osoitteeseen
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;
